Kubernetes/bootstrap/observability/alloy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy
  namespace: observability
  labels:
    app: alloy
spec:
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
        - name: alloy
          image: grafana/alloy:v1.20.1
          args:
            - run
            - /etc/alloy/config.alloy
            - --server.http.listen-addr=0.0.0.0:12345
            - --storage.path=/tmp/alloy
          ports:
            - name: http
              containerPort: 12345
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
            - name: data
              mountPath: /tmp/alloy
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 1Gi
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false

      volumes:
        - name: config
          configMap:
            name: alloy-config
        - name: data
          emptyDir: {}

      tolerations:
        - effect: NoSchedule
          operator: Exists
